--- a/src/styles.css
+++ b/src/styles.css
@@ -6,27 +6,22 @@
 }
 
 .App {
-  top: 4rem;
   width: 100%;
   height: 100%;
-  min-width: 100vh;
-  display: flex;
+  display:flex;
 }
 
 h1 {
   color: #fff;
   font-size: 32px;
   line-height: 1;
-  position: absolute;
-  top: 50px;
-  left: 50px;
-  transform: translate(-50% -50%);
+  position: fixed;
 }
 
 .container {
   margin: auto;
   width: 100%;
-  max-width: 450px;
+  max-width: 400px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -43,10 +38,11 @@ h1 {
   margin: 10px 0;
   font-weight: 600;
   cursor: pointer;
+  text-transform:uppercase;
 }
 
 .container .card .box {
-  width: 100%;
+  width: 100px;
   height: 100px;
   border-radius: 50%;
   cursor: pointer;
